# cppmipt

./: .gitignore  README.md
hw1/hwc/: CMakeLists.txt  README.MD
hw1/hwc/graph/: graph_comprasion.py
hw1/hwc/include/: arc_cache.hpp  cache_interface.hpp  get_pages.hpp  lru_cache.hpp  optimal_cache.hpp
hw1/hwc/src/: main.cpp
hw1/hwc/tests/: CMakeLists.txt  test_lru_cache.cpp
hw1/hwc/tests/functional/: run_tests.py  run_tests_lru.py
hw1/hwc/tests/unit/: CMakeLists.txt  test_arc_cache.cpp  test_lru_cache.cpp  test_opt_cache.cpp
hw2/hw3d/: CMakeLists.txt  README.md
hw2/hw3d/include/: base2d.hpp  base3d.hpp  geometry_ops.hpp  plane3d.hpp  point2d.hpp  point3d.hpp  triangle2d.hpp  triangle3d.hpp  vector2d.hpp  vector3d.hpp
hw2/hw3d/include/detail/: epsilon.hpp  fp_utils.hpp
hw2/hw3d/src/: main.cpp
hw2/hw3d/tests/unit/: CMakeLists.txt  test_plane3d.cpp  test_point3d.cpp  test_triangle3d.cpp  test_vector3d.cpp
hw3/rq/: CMakeLists.txt  README.md
hw3/rq/include/: bst.hpp  container.hpp  optypes.hpp  parser.hpp  rb_tree.hpp
hw3/rq/src/: main.cpp
hw3/rq/tests/unit/: CMakeLists.txt  test_parse.cpp  test_rbtree.cpp
hw5/hwmx/: CMakeLists.txt  README.md
hw5/hwmx/include/: matrix.hpp
hw5/hwmx/src/: main.cpp
hw5/hwmx/tests/: check_tests.cpp
hw5/hwmx/tests/testgen/: create_data.py
hw5/hwmx/tests/unit/: CMakeLists.txt  test_matrix.cpp
hw6/hwp/include/: driver.hpp  trees.hpp  visitor.hpp
hw6/hwp/src/lexer/: scanner.l
hw6/hwp/src/parser/: grammar.y
hw6/hwp/tests/code_ex/fibs_p/: fibs.pcl
hw6/hwp/tests/unit/: test_lexer.l
hw6/hwp/tests/unit/test_lex/: test_lexer.l
